# Aircraft

./: .gitignore  .prettierignore  .prettierrc.yml  .yarnrc.yml  404.html  CNAME  Cargo.toml  README.md  about.html  attachment.html  changelog.html  electron-builder.json5  eslint.config.js  hashmap.json  index.html  issue.html  llm.html  package-lock.json  package.json  privacy.html  quick_start.html  rule.html  rustfmt.toml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  updates.json  vite.config.ts  vite.electron.config.ts  yakumo.yml
.github/workflows/: publish-crate-lib.yml  release-wxt.yml  release.yml
.husky/: pre-commit  pre-commit.cjs  update-manifest.cjs
assets/: about.md.BFZ-QH3z.js  about.md.BhjzOrTY.js  about.md.BhjzOrTY.lean.js  about.md.CJz3WjIZ.js  about.md.CJz3WjIZ.lean.js  about.md.CNk-3hwT.js  about.md.CNk-3hwT.lean.js  about.md.CYyPRI0o.js  about.md.CYyPRI0o.lean.js  about.md.Dj0mwIQB.js  app.BtdMHbJ4.js  app.Czs5Ior6.js  app.cPQmWesf.js  attachment.md.BgMf5bJa.js  attachment.md.Bw7k4DRF.js  attachment.md.Cr9MwykX.js  attachment.md.Cr9MwykX.lean.js  attachment.md.D2fHJdAx.js  attachment.md.DFexZ1W3.js  attachment.md.DFexZ1W3.lean.js  attachment.md.Du0EaJK3.js  attachment.md.Du0EaJK3.lean.js  attachment.md.SAprFJcR.js  attachment.md.ilWtHpbv.js  attachment.md.ilWtHpbv.lean.js  changelog.md.1jNUSAym.js  changelog.md.1jNUSAym.lean.js  changelog.md.4ZuwOIKG.js  changelog.md.4ZuwOIKG.lean.js  changelog.md.78Nym4W0.js  changelog.md.8VItN4lK.js  changelog.md.8d34WFpj.js  changelog.md.8d34WFpj.lean.js  changelog.md.B-h1qVfZ.js  changelog.md.B-h1qVfZ.lean.js  changelog.md.B0QnSHJH.js  changelog.md.B0QnSHJH.lean.js  changelog.md.B0kQfse3.js  changelog.md.B0kQfse3.lean.js  changelog.md.B46EMocw.js  (+306 more)
assets/chunks/: framework.BW-sVDyT.js  framework.D3WoZ7QZ.js  framework.jaYnwGmY.js  theme.B-cOyZ7U.js  theme.mBzSARey.js  theme.zPWMxtSu.js
bindings/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json  readme.md
bindings/node/.github/workflows/: CI.yml
bindings/node/src/: lib.rs
clipboard_persistence/: Cargo.toml  WINDOWS_API_USAGE.md
clipboard_persistence/examples/: windows_full_format.rs
clipboard_persistence/src/: lib.rs  main.rs  windows_clipboard.rs
electron/: electron-builder.json  electron-builder.json5  forge.config.ts  index.html  package.json  tsconfig.json  vite.electron.config.ts
electron/httpServer/: index.ts
electron/main/: context.ts  index.ts  logger.ts
electron/main/attachment/: index.ts
electron/main/plugins/: attachment.ts  launch.ts  windowManager.ts
electron/main/service/: app.ts  attachment.ts  bindings.ts  config.ts  core.ts  hotkey.ts  ipc.ts  llm.ts  log.ts  logger.ts  server.ts  tray.ts  win.ts
electron/preload/: index.ts
electron/renderer/: App.vue  main.ts
electron/renderer/assets/css/: app.css  blake.css  main.scss
electron/renderer/components/: Schema.vue  SchemaBase.vue  SchemaHotkey.vue  SideBar.vue  SummaryTable.vue  TitleBar.vue
electron/renderer/router/: index.ts
electron/renderer/stores/: auth.ts  mask.ts
electron/renderer/utils/: ipcManager.ts  logger.ts
electron/renderer/views/: Blake2.vue  Logs.vue  PdfParse.vue
electron/task/: index.ts
electron/types/: index.ts
headless/: .gitignore  Cargo.toml  build.rs
headless/src/: config.rs  main.rs
headless/src/tray/: tray.rs
headless/src/utils/: launch.rs  mod.rs  regedit.rs
image_classifier/: .gitignore  Cargo.toml
image_classifier/src/: main.rs  remove_duplicate_project.rs
pdf-parser/: Cargo.toml
pdf-parser/src/: lib.rs  parse.rs  read.rs  types.rs  uploader.rs
pdf_parser/: Cargo.toml
pdf_parser/src/: lib.rs  parse.rs  read.rs  types.rs
share/: Cargo.toml
share/src/: hotkey_manager.rs  lib.rs  logger.rs
share/src/attachment_parser/: mod.rs
share/src/attachment_parser/pdf/: parse.rs  read.rs  types.rs
share/src/config/: mod.rs
share/src/hotkey_handler/: copy.rs  copy2.rs  copy_to_clipboard.rs  doc.rs  docx.rs  mod.rs
share/src/manager/: clipboard_snapshot_manager.rs  hotkey_manager.rs  mod.rs  server_manager.rs
share/src/pdf_parser/: parse.rs  read.rs  types.rs  uploader.rs
share/src/summary_rs/: mod.rs  reader.rs  types.rs
share/src/summary_rs/modify_docx/: mod.rs
share/src/summary_rs/parse/: assign.rs  mod.rs  read.rs  regex.rs
share/src/task_proxy/: http_client.rs  mod.rs  webhook.rs
share/src/types/: mod.rs
share/src/utils/: config_everything.rs  fs.rs  mod.rs  parse_prompt.md  uploader.rs
share/src/yolov8/: mod.rs
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  webview2.x64.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apply.rs  command.rs  config.rs  handle.rs  lib.rs  listen_manager.rs  logger.rs  main.rs  menu.rs  server_manager.rs  utils.rs
src-tauri/src/blake2/: handle.rs  mod.rs  utils.rs
src-tauri/src/hotkey/: copy.rs  doc.rs  docx.rs  upload.rs
src-tauri/src/pdf/: mod.rs  parse.rs
src-tauri/src/pdf_extract/: mod.rs
src-tauri/src/utils/: dialog.rs  fs.rs  mod.rs  utils.rs
src-tauri/src/ziafp/: check.rs  mod.rs  server.rs
src/assets/css/: blake.css
src/components/: FileTile.vue  PdfData.vue  Schema.vue  SchemaBase.vue  SchemaHotkey.vue  SchemaLLM.vue  SideBar.vue  SummaryTable.vue  TitleBar.vue  summaryData.vue
src/router/: index.ts
src/stores/: auth.ts  isListen.ts  logs.ts  mask.ts
src/types/: index.ts
src/utils/: ipcManager.ts  logger.ts  utils.ts
src/views/: Blake2.vue  Home.vue  Logs.vue  PdfParse.vue  Stack.vue
summary/: Cargo.toml
summary-rs/: Cargo.toml
summary-rs/src/: lib.rs
summary/src/: lib.rs  reader.rs  types.rs
summary/src/modify_docx/: mod.rs  utils.rs
summary/src/parse/: assign.rs  read.rs  regex.rs
types/: Cargo.toml  schemastery-vue.d.ts
types/src/: attachment.rs  config.rs  lib.rs  llm.rs  logger.rs  others.rs  pdf_parser.rs  project.rs  summary.rs  yolo.rs
wasm_utils/: Cargo.toml  build.bat
wasm_utils/src/: lib.rs
yolo/: Cargo.toml
yolo/src/: lib.rs  segment.rs
yolov8/: Cargo.toml
