[package]
name = "clipboard_persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
] }
