[package]
name = "headless"
version = "0.1.0"
edition = "2021"

[dependencies]
share = { path = "../share" }
tokio = { version = "1.41.0", features = ["full"] }
dotenv = "0.15.0"
tao = "0.31.1"
tray-icon = "0.19.1"
windows = { version = "0.58.0", features = [
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Foundation", 
  "Win32_System_Console"
] }
image = "0.25.4"
winreg = "0.52.0"
is_elevated = "0.1.2"
aircraft-types = { path = "../types" }

[build-dependencies]
winres = "0.1.12"