[package]
name = "pdf-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
pdf = "0.9.0"
fax = "0.2.4"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"] }