[package]
name = "pdf_parser"
version = "0.1.0"
edition = "2024"

[features]
default = ["napi-support"]
napi-support = ["napi", "napi-derive"]

[dependencies]
pdf = "0.9.0"
fax = "0.2.4"
pdf-extract = "0.8.2"
lazy_static = "1.5.0"

napi = { version = "2.12.2", default-features = false, features = ["napi4", "async", "serde-json"], optional = true }
napi-derive = { version = "2.12.2", optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1.11.1"