[package]
name = "pdf_parser"
version = "0.1.0"
edition = "2024"

[features]
default = []
napi-support = ["aircraft-types/napi-support"]
wasm-support = ["aircraft-types/wasm-support"]

[dependencies]
pdf = "0.9.0"
fax = "0.2.4"
pdf-extract = "0.8.2"
lazy_static = "1.5.0"
regex = "1.11.1"
aircraft-types = { path = "../types" }
