[package]
name = "share"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1", features = ["full"]}
warp = "0.3.7"
lazy_static = "1.5.0"
native-dialog = "0.7.0"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"] }
copypasta = "0.10.1"
enigo = "0.2.1"
summary-rs = {version = "0.1.2", path = "../summary-rs"}
ort = "2.0.0-rc.9"
ndarray = "0.16.1"
image = "0.25.4"
pdf = "0.9.0"
fax = "0.2.4"
flextrek = "0.2.2"
anyhow = "1.0.95"
clipboard-rs = "0.2.2"
