[package]
name = "share"
version = "0.1.0"
edition = "2021"

[features]
default = []
napi-support = [
  "summary/napi-support",
  "pdf_parser/napi-support",
  "aircraft-types/napi-support",
]

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"
lazy_static = "1.5.0"
native-dialog = "0.7.0"
reqwest = { version = "0.12.8", features = [
  "blocking",
  "json",
  "multipart",
  "cookies",
  "stream",
] }
copypasta = "0.10.1"
enigo = "0.2.1"
flextrek = "0.2.2"
clipkeeper = "0.1.1"
clipboard-rs = "0.3.0"
futures-util = "0.3.31"
bytes = "1.10.1"
clipboard-win = "5.4.1"
summary = { path = "../summary" }
pdf_parser = { path = "../pdf_parser" }
aircraft-types = { path = "../types" }
urlencoding = "2.1.3"
base64 = "0.22"
