[package]
name = "aircraft"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aircraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0.3"
tauri-plugin-autostart = "2.0.1"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"] }
tokio = { version = "1.41.0", features = ["full"] }
chrono = "0.4.38"
image = "0.25.4"
copypasta = "0.10.1"
enigo = "0.2.1"
lazy_static = "1.5.0"
regex = "1.11.1"
warp = "0.3.7"
colored = "2.1.0"
flextrek = "0.2.1"
native-dialog = "0.7.0"
tauri-plugin-store = "2.1.0"
zip = "2.2.1"
summary-rs = "0.1.1"
