[package]
name = "summary"
version = "0.1.0"
edition = "2024"

[features]
default = ["napi-support"]
napi-support = ["napi", "napi-derive"]
wasm-support = ["tsify", "wasm-bindgen"]

[dependencies]
serde = "1.0.228"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.145"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async", "serde-json"], optional = true }
napi-derive = { version = "2.12.2", optional = true }
tsify = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.105", optional = true }

# Limit zip features to pure Rust deflate to avoid bzip2/zstd C backends for wasm target.
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
lazy_static = "1.5.0"
regex = "1.12.2"
quick-xml = "0.38.4"
# Ensure wasm randomness works in browser/JS environment.
getrandom = { version = "0.2.15", features = ["js"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
