[package]
name = "summary"
version = "0.1.0"
edition = "2024"

[features]
default = []
napi-support = ["aircraft-types/napi-support"]
wasm-support = ["aircraft-types/wasm-support"]

[dependencies]
serde_json = "1.0.145"
aircraft-types = { path = "../types" }

# Limit zip features to pure Rust deflate to avoid bzip2/zstd C backends for wasm target.
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
lazy_static = "1.5.0"
regex = "1.12.2"
quick-xml = "0.37.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
