[package]
name = "wasm_utils"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
serde = "1.0.228"
wasm-bindgen = "0.2.105"
# Optional native dependency; gated behind the "native" feature so it won't build for wasm32-unknown-unknown.
summary = { path = "../summary", features = ["wasm-support"] }
pdf_parser = { path = "../pdf_parser", features = ["wasm-support"] }
aircraft-types = { path = "../types", features = ["wasm-support"] }
tsify = "0.5.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.55"

[profile.release]
# Optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
