[package]
edition = "2021"
name = "aircraft-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", features = ["async"] }
napi-derive = "2.12.0"
share = { path = "../../share" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"
summary-rs = { path = "../../summary-rs" }
regex = "1.11.1"
lazy_static = "1.5.0"
pdf-parser = { path = "../../pdf-parser" }
[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
